# llvm-mutate

./: .gitignore  CMakeLists.txt  README  llvm-mutate  llvm-mutate.py
Mutate/: CMakeLists.txt  Mutate.cpp  Mutate.h
tests/: query.ll
